--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,20 +1,40 @@
 @use 'bootstrap-reboot';
-@use 'bootstrap-grid';
+@use 'breakpoints';
+
+html {
+  font-size: 16px;
+  @include breakpoints.sm-width {
+    font-size: 18px;
+  }
+}
 
 html,
 body {
   width: 100%;
   height: 100%;
+  webkit-font-smoothing: antialiased;
+}
+
+.hide-mobile {
+  @include breakpoints.xs-width-only {
+    display: none;
+  }
 }
 
 #app {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-wrap: nowrap;
 }
 
 #candidates-list {
   height: 100%;
   overflow: scroll;
+  flex-grow: 0;
+  flex-shrink: 0;
+  width: 25%;
+  margin-right: 1rem;
   .office-button {
     appearance: none;
     display: block;
@@ -22,15 +42,22 @@ body {
     background-color: white;
     border: none;
     border-bottom: 1px solid #eee;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem;
     text-align: left;
+    font-weight: 500;
+    font-size: 0.76rem;
     &.selected {
       background-color: #beaedb;
+    }
+    @include breakpoints.sm-width {
+      font-size: 1rem;
+      padding: 0.5rem 1rem;
     }
   }
 }
 
 #responses {
+  flex-basis: 75%;
   height: 100%;
   overflow: scroll;
   position: relative;
@@ -39,27 +66,45 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 1.5rem;
+    font-size: 1rem;
+    width: 100%;
     color: #666;
     text-align: center;
+    @include breakpoints.sm-width {
+      font-size: 1.5rem;
+    }
   }
   #entries-controls {
     display: flex;
     align-items: center;
     justify-content: center;
     margin-bottom: 1rem;
+    position: fixed;
+    background-color: white;
+    padding: 1rem;
+    border: 1px solid #ccc;
+    border-top: none;
+    border-radius: 0 0 10px 10px;
+    width: 220px;
+    @include breakpoints.sm-width {
+      width: 360px;
+    }
     button {
-      background-color: #8054cf;
-      color: white;
-      font-weight: 700;
+      flex-basis: 50%;
+      flex-grow: 0;
+      flex-shrink: 0;
+      background-color: #ececed;
+      color: rgb(19, 19, 19);
+      font-size: 0.8rem;
+      font-weight: 400;
       border: none;
+      border: 1px solid #ccc;
       border-radius: 8px;
-      width: 40px;
       &:active {
-        background-color: hsl(262, 49%, 51%);
+        background-color: #ddd;
       }
       &:first-of-type {
-        margin-right: 1rem;
+        margin-right: 0.9rem;
       }
       &:disabled {
         opacity: 0.5;
@@ -67,6 +112,20 @@ body {
     }
   }
   .entry {
+    padding-top: 75px;
+    h3 {
+      font-family: "Alternate Gothic 3", sans-serif;
+      font-size: 2.5rem;
+      line-height: 1.05;
+      margin-bottom: 1rem;
+      @include breakpoints.sm-width {
+        font-size: 2.9rem;
+      }
+    }
+    p,
+    li {
+      font-family: "Source Serif 4 Sm", Georgia, serif;
+    }
     .question {
       margin-bottom: 2rem;
       p {
