--- a/styles/style.scss
+++ b/styles/style.scss
@@ -81,8 +81,8 @@ body {
     margin-bottom: 1rem;
     position: fixed;
     background-color: white;
-    padding: 1rem;
-    border: 1px solid #ccc;
+    padding: 0.75rem;
+    border: 1px solid #d5d5d5;
     border-top: none;
     border-radius: 0 0 10px 10px;
     width: 220px;
@@ -92,10 +92,9 @@ body {
     button {
       flex-basis: 50%;
       flex-grow: 0;
-      flex-shrink: 0;
       background-color: #ececed;
       color: rgb(19, 19, 19);
-      font-size: 0.8rem;
+      font-size: 0.75rem;
       font-weight: 400;
       border: none;
       border: 1px solid #ccc;
@@ -112,14 +111,14 @@ body {
     }
   }
   .entry {
-    padding-top: 75px;
+    padding-top: 86px;
     h3 {
       font-family: "Alternate Gothic 3", sans-serif;
       font-size: 2.5rem;
       line-height: 1.05;
-      margin-bottom: 1rem;
+      margin-bottom: 1.5rem;
       @include breakpoints.sm-width {
-        font-size: 2.9rem;
+        font-size: 2.8rem;
       }
     }
     p,
