--- a/styles/style.scss
+++ b/styles/style.scss
@@ -25,11 +25,26 @@ body {
   border-top: 1px solid #ccc;
 }
 
+$separator-color: #e1e1e1;
+$purple: #8054cf;
+
 #app {
   width: 100%;
   height: 100%;
   display: flex;
   flex-wrap: nowrap;
+  @include breakpoints.xs-width-only {
+    &[data-focus="menu"] {
+      #responses {
+        display: none;
+      }
+    }
+    &[data-focus="responses"] {
+      #candidates-list {
+        display: none;
+      }
+    }
+  }
 }
 
 #candidates-list {
@@ -37,38 +52,71 @@ body {
   overflow: scroll;
   flex-grow: 0;
   flex-shrink: 0;
-  width: 25%;
+  margin: 0;
+  padding: 0;
   margin-right: 1rem;
-  .office-button {
-    appearance: none;
-    display: block;
-    width: 100%;
+  width: 100%;
+  border-right: 1px solid $separator-color;
+  @include breakpoints.sm-width {
+    width: 33%;
+  }
+  @include breakpoints.md-width {
+    width: 25%;
+  }
+  .office {
+    list-style: none;
     background-color: white;
-    border: none;
-    border-bottom: 1px solid #eee;
-    padding: 0.5rem;
-    text-align: left;
-    font-weight: 500;
-    font-size: 0.76rem;
-    &:hover {
-      background-color: #eee;
+    border-bottom: 1px solid $separator-color;
+    button {
+      appearance: none;
+      background-color: transparent;
+      display: block;
+      width: 100%;
+      border: none;
+      padding: 0.5rem;
+      text-align: left;
+      font-weight: 600;
+      font-size: 1rem;
+      &:hover {
+        background-color: #eee;
+      }
+      &.selected {
+        background-color: #c7bbde;
+      }
+      @include breakpoints.sm-width {
+        font-size: 1rem;
+        padding: 0.5rem 1rem;
+      }
+    }
+    .candidates {
+      margin: 0;
+      margin-bottom: 0.8rem;
+      padding: 0;
+      display: none;
+      li {
+        list-style: none;
+      }
+      button {
+        font-weight: 400;
+      }
     }
     &.selected {
-      background-color: #c7bbde;
-    }
-    @include breakpoints.sm-width {
-      font-size: 1rem;
-      padding: 0.5rem 1rem;
+      .candidates {
+        display: block;
+      }
     }
   }
 }
 
 #responses {
-  flex-basis: 75%;
   height: 100%;
   overflow: scroll;
   position: relative;
+  @include breakpoints.sm-width {
+    flex-basis: 75%;
+  }
   .placeholder {
+    display: none;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -81,20 +129,43 @@ body {
       font-size: 1.5rem;
     }
   }
+  &[data-no-responses] {
+    .placeholder {
+      display: block;
+    }
+    #entries-controls {
+      display: none;
+    }
+  }
   #entries-controls {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     margin-bottom: 1rem;
     position: fixed;
+    top: 0;
     background-color: white;
-    padding: 0.75rem;
-    border: 1px solid #d5d5d5;
+    border: 1px solid $separator-color;
     border-top: none;
-    border-radius: 0 0 10px 10px;
-    width: 220px;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    width: 100%;
     @include breakpoints.sm-width {
+      padding-left: 0.75rem;
+      padding-right: 0.75rem;
       width: 360px;
+      border-radius: 0 0 10px 0;
+      margin-left: calc(-1rem - 1px);
+    }
+    #office-title {
+      text-transform: uppercase;
+      font-size: 0.85rem;
+      display: none;
+      @include breakpoints.xs-width-only {
+        display: block;
+      }
+    }
+    .buttons {
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
     button {
       flex-basis: 50%;
@@ -109,23 +180,62 @@ body {
       &:active:not(:disabled) {
         background-color: #663ab7;
       }
-      &:first-of-type {
+      &:not(:last-of-type) {
         margin-right: 0.9rem;
       }
       &:disabled {
         opacity: 0.5;
       }
+      &#show-menu {
+        display: none;
+        @include breakpoints.xs-width-only {
+          display: block;
+        }
+      }
     }
   }
   .entry {
     padding-top: 86px;
+    .entry-heading {
+      display: flex;
+      align-items: center;
+      margin-bottom: 1.5rem;
+      h3,
+      .links {
+        display: inline-flex;
+      }
+    }
     h3 {
       font-family: "Alternate Gothic 3", sans-serif;
       font-size: 2.5rem;
       line-height: 1.05;
-      margin-bottom: 1.5rem;
+      margin: 0;
+      margin-right: 1rem;
       @include breakpoints.sm-width {
         font-size: 2.8rem;
+      }
+    }
+    .links {
+      align-items: center;
+      padding: 0;
+      margin: 0;
+      li {
+        list-style: none;
+        &:empty {
+          display: none;
+        }
+        &:not(:last-of-type) {
+          margin-right: 1rem;
+        }
+        a {
+          font-size: 1.5rem;
+          &.facebook {
+            color: #1974e5;
+          }
+          &.twitter {
+            color: #1c9bf0;
+          }
+        }
       }
     }
     p,
